project was spartanized
small problems were caused in:
 * SpartanizerAnnotator
 * Utils

 the problems were fixed but now these files are not entirely spartanized